--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-streamlit==1.45.1
-opencv-python-headless==4.9.0.80  # 无GUI依赖版本[3,6](@ref)
-numpy==1.26.4  # 避免新版兼容问题[5,7](@ref)
-pandas==2.2.3
+--index-url https://pypi.tuna.tsinghua.edu.cn/simple
+--trusted-host pypi.tuna.tsinghua.edu.cn
+--use-feature=fast-deps
+streamlit>=1.45.1
+opencv-python-headless>=4.9.0 # 无GUI依赖版本[3,6](@ref)
+numpy>=1.26.4  # 避免新版兼容问题[5,7](@ref)
+pandas>=2.2.3
 pillow==11.2.1  # PIL现代维护版[3,8](@ref)
 torch==2.5.1+cu118  # 明确CUDA版本[5,8](@ref)
 torchvision==0.20.1
