--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
---index-url https://pypi.tuna.tsinghua.edu.cn/simple
---trusted-host pypi.tuna.tsinghua.edu.cn
---use-feature=fast-deps
-streamlit>=1.45.1
-opencv-python-headless>=4.9.0 # 无GUI依赖版本[3,6](@ref)
-numpy>=1.26.4  # 避免新版兼容问题[5,7](@ref)
-pandas>=2.2.3
-pillow==11.2.1  # PIL现代维护版[3,8](@ref)
-torch==2.5.1+cu118  # 明确CUDA版本[5,8](@ref)
-torchvision==0.20.1
-ultralytics==8.3.122  # YOLO官方库[3,6](@ref)
-pyyaml==6.0.2  # 配置文件解析[5](@ref)
+# 镜像源配置（必须置于文件顶部）
+--index-url=https://pypi.tuna.tsinghua.edu.cn/simple
+--trusted-host=pypi.tuna.tsinghua.edu.cn
+
+# 核心依赖
+streamlit==1.45.1
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+pandas==2.2.3
+pillow==11.2.1
+
+# PyTorch CPU版本（适配Python 3.10）
+torch==2.3.1+cpu
+torchvision==0.18.1+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
