--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,21 @@
 # Web 框架
 streamlit==1.45.1
 streamlit-webrtc==0.62.4
-
+av==10.0.0
 # 计算机视觉 & 深度学习
 ultralytics==8.3.122
 opencv-python-headless==4.9.0.80
-av
-
+# 模型可视化
+torchviz==0.0.2
+graphviz==0.20.1
+# 可选屏幕捕捉
+mss==8.0.1
+# Excel 导出
+XlsxWriter==4.0.4
 # 数据处理
 numpy==1.26.4
 pandas==2.2.3
 Pillow==11.2.1
-
 # PyTorch CPU 版本
 torch==2.3.1+cpu
 torchvision==0.18.1+cpu
