--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,13 @@
 # Web 框架
 streamlit==1.45.1
 streamlit-webrtc==0.62.4
-av==10.0.0
+# av==10.0.0
 # 计算机视觉 & 深度学习
 ultralytics==8.3.122
 opencv-python-headless==4.9.0.80
 # 模型可视化
-torchviz==0.0.2
-graphviz==0.20.1
+# torchviz==0.0.2
+# graphviz==0.20.1
 # 可选屏幕捕捉
 # mss==8.0.1
 
